--- a/Views/Departments/Create.cshtml
+++ b/Views/Departments/Create.cshtml
@@ -20,8 +20,15 @@
                 <input asp-for="DepartmentName" class="form-control" />
                 <span asp-validation-for="DepartmentName" class="text-danger"></span>
             </div>
-            
             <div class="form-group">
+                <label asp-for="ParentId" class="control-label"></label>
+                <select asp-for="ParentId" class="form-control" asp-items="@ViewBag.DepartmentParent">
+                    <option>Chọn phòng ban cấp trên</option>
+                </select>
+                <span asp-validation-for="ParentId" class="text-danger"></span>
+            </div>
+            
+            <div class="form-group mt-4">
                 <input type="submit" value="Tạo mới" class="btn btn-primary" />
                 <a class="btn btn-secondary" asp-action="Index">Trở lại</a>
 
