--- a/Views/Departments/Details.cshtml
+++ b/Views/Departments/Details.cshtml
@@ -1,13 +1,12 @@
-﻿@model Web_DonNghiPhep.Models.Department
+﻿@model Web_DonNghiPhep.ViewModels.DepartmentVM
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h4>Chi tiết phòng ban</h4>
 
 <div>
-    <h4>Department</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -17,10 +16,16 @@
             @Html.DisplayFor(model => model.DepartmentName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ManagerId)
+            @Html.DisplayNameFor(model => model.Manager)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ManagerId)
+            @Html.DisplayFor(model => model.Manager)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Parent)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Parent)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedAt)
@@ -37,6 +42,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Department_id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@Model?.Department_id">Sửa</a>
+    <a class="btn btn-secondary" asp-action="Index">Trở lại</a>
 </div>
