--- a/Views/Departments/Edit.cshtml
+++ b/Views/Departments/Edit.cshtml
@@ -19,8 +19,16 @@
             </div>
             <div class="form-group">
                 <label asp-for="ManagerId" class="control-label"></label>
-                <select class="form-control" asp-for="ManagerId" asp-items="ViewBag.Employee"></select>
+                <select class="form-control" asp-for="ManagerId" asp-items="@ViewBag.Employee"></select>
                 <span asp-validation-for="ManagerId" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="ParentId" class="control-label"></label>
+                <select asp-for="ParentId" class="form-control" asp-items="@ViewBag.DepartmentParent">
+                    <option>Chọn phòng ban cấp trên</option>
+                </select>
+                <span asp-validation-for="ParentId" class="text-danger"></span>
             </div>
             
             <div class="form-group  my-2">
