--- a/Views/LeaveBalances/Create.cshtml
+++ b/Views/LeaveBalances/Create.cshtml
@@ -14,6 +14,7 @@
             <div class="form-group">
                 <label asp-for="Employee_ids" class="control-label"></label>
                 <select asp-for="Employee_ids" class="form-control" asp-items="ViewBag.Employee_id" multiple></select>
+                <span asp-validation-for="Employee_ids" class="text-danger"></span>
             </div>
             <div class="form-group my-2">
                 <label asp-for="Year" class="control-label"></label>
