Updaet_by_Hien_31_12

--- a/Views/Shared/_NavbarPartial.cshtml
+++ b/Views/Shared/_NavbarPartial.cshtml
@@ -39,6 +39,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="LeaveBalances" asp-action="Index">Cấu hình ngày nghỉ</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ListDonDuyet" asp-action="Index">Lịch sử duyệt đơn</a>
+                        </li>
                     }
                 }
 
