--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,14 +17,14 @@
     </style>
 </head>
 <body>
-    @if(User.Identity.IsAuthenticated)
+    @if (User.Identity.IsAuthenticated)
     {
         <header class="container">
             <partial name="_NavbarPartial" />
         </header>
     }
-    
-     <partial name="_AlertMessagePartial" />
+
+    <partial name="_AlertMessagePartial" />
 
     <div class="container">
         <main role="main" class="pb-3">
@@ -32,15 +32,57 @@
         </main>
     </div>
 
-    
+    <div class="modal fade" id="notificationModal" tabindex="-1" aria-labelledby="notificationModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="notificationModalLabel">Thông báo</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="modalMessage">
+                    <!-- hiển thị thông báo nghỉ việc -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="closeNotificationModal">Đóng</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/7.0.0/signalr.min.js"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
     <script>
         setTimeout(function () {
             $(".alert").alert("close");
         }, 3000);
+
+        
+        const connection = new signalR.HubConnectionBuilder()
+            .withUrl("/notificationHub")
+            .build();
+
+        connection.start().then(() => {
+            console.log("SignalR connected!");
+
+            const userRole = '@User.FindFirst("role")?.Value';
+            connection.invoke("JoinGroup", userRole);
+        });
+
+        connection.on("ReceiveNotification", function (message) {
+       
+            document.getElementById('modalMessage').innerText = message;
+            const notificationModal = new bootstrap.Modal(document.getElementById('notificationModal'));
+            notificationModal.show();
+        });
+
+        document.getElementById('closeNotificationModal').addEventListener('click', function () {
+            //reload lại trang web
+            location.reload();
+        });
     </script>
 </body>
 </html>
