--- a/Views/Departments/Create.cshtml
+++ b/Views/Departments/Create.cshtml
@@ -23,7 +23,7 @@
             <div class="form-group">
                 <label asp-for="ParentId" class="control-label"></label>
                 <select asp-for="ParentId" class="form-control" asp-items="@ViewBag.DepartmentParent">
-                    <option>Chọn phòng ban cấp trên</option>
+                    <option value="">Chọn phòng ban cấp trên</option>
                 </select>
                 <span asp-validation-for="ParentId" class="text-danger"></span>
             </div>
