--- a/Views/Users/Edit.cshtml
+++ b/Views/Users/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Chỉnh sửa thông tin tài khoản</h1>
+<h4>Chỉnh sửa thông tin tài khoản</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -21,11 +21,18 @@
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Role_IDs" class="control-label"></label>
-                <select asp-for="Role_IDs" class="form-control" asp-items="ViewBag.Role_ID" multiple></select>
-                <span asp-validation-for="Role_IDs" class="text-danger"></span>
-            </div>
+            @if (Model.Roles_Name != null && Model.Roles_Name.Any())
+            {
+                if (Model.Roles_Name.Count >= 1 && !Model.Roles_Name.Contains("Admin"))
+                {
+                    <div class="form-group">
+                        <label asp-for="Role_IDs" class="control-label"></label>
+                        <select asp-for="Role_IDs" class="form-control" asp-items="ViewBag.Role_ID" multiple></select>
+                        <span asp-validation-for="Role_IDs" class="text-danger"></span>
+                    </div>
+                }
+            }
+
             <div class="form-group my-2">
                 <label asp-for="FullName" class="control-label"></label>
                 <input asp-for="FullName" class="form-control" />
@@ -54,18 +61,18 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-           
+
             <div class="form-group form-check  my-2">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="Status" /> @Html.DisplayNameFor(model => model.Status)
                 </label>
             </div>
-  
-            
+
+
             <div class="form-group">
                 <input class="btn btn-warning" type="submit" value="Lưu" class="btn btn-primary" />
                 <a class="btn btn-secondary" asp-action="Index">Trở lại</a>
-                
+
             </div>
         </form>
     </div>
