--- a/Views/Shared/_NavbarPartial.cshtml
+++ b/Views/Shared/_NavbarPartial.cshtml
@@ -23,6 +23,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Titles" asp-action="Index">Quản lý chức danh</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Departments" asp-action="LeaveStatistics">Thống kê ngày nghỉ</a>
+                        </li>
                     }
 
                     if (roles.Contains("nhân viên"))
