--- a/Views/Titles/Details.cshtml
+++ b/Views/Titles/Details.cshtml
@@ -10,6 +10,12 @@
     <h4>Titles</h4>
     <hr />
     <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Title_id)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Title_id)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Title_name)
         </dt>
