--- a/Views/Departments/Delete.cshtml
+++ b/Views/Departments/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Web_DonNghiPhep.Models.Department
+﻿@model Web_DonNghiPhep.ViewModels.DepartmentVM
 
 @{
     ViewData["Title"] = "Delete";
@@ -15,10 +15,10 @@
             @Html.DisplayFor(model => model.DepartmentName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ManagerId)
+            @Html.DisplayNameFor(model => model.Manager)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ManagerId)
+            @Html.DisplayFor(model => model.Manager)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedAt)
@@ -36,7 +36,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Department_id" />
-        <input type="submit" value="Delete" class="btn btn-danger" />
+        <input type="submit" onclick="return confirm('Bạn có chắc chắn muốn xóa không?');" value="Delete" class="btn btn-danger" />
         <a class="btn btn-secondary" asp-action="Index">Trở lại</a>
     </form>
 </div>
