--- a/Views/LeaveBalances/Create.cshtml
+++ b/Views/LeaveBalances/Create.cshtml
@@ -18,7 +18,8 @@
             </div>
             <div class="form-group my-2">
                 <label asp-for="Year" class="control-label"></label>
-                <input asp-for="Year" class="form-control" />
+                @* <input asp-for="Year" class="form-control" /> *@
+                <select asp-for="Year" class="form-control" asp-items="@(new SelectList(ViewBag.Years))"></select>
                 <span asp-validation-for="Year" class="text-danger"></span>
             </div>
             <div class="form-group">
