--- a/Views/Users/login.cshtml
+++ b/Views/Users/login.cshtml
@@ -8,11 +8,13 @@
         <form asp-controller="Users" asp-action="Login" method="post">
             <div class="mb-3">
                 <label for="Username" class="form-label">Tên đăng nhập</label>
-                <input type="text" asp-for="UserName" class="form-control" id="Username" placeholder="Nhập tên đăng nhập" required>
+                <input type="text" asp-for="UserName" class="form-control" id="Username" placeholder="Nhập tên đăng nhập">
+                <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Mật khẩu</label>
-                <input type="password" asp-for="Password" class="form-control" id="password" placeholder="Nhập mật khẩu" required>
+                <input type="password" asp-for="Password" class="form-control" id="password" placeholder="Nhập mật khẩu">
+                <span asp-validation-for="Password" class="text-danger"></span>
             </div>
 
             <button type="submit" class="btn btn-primary w-100">Đăng nhập</button>
